--- a/package.yaml
+++ b/package.yaml
@@ -23,12 +23,14 @@ dependencies:
 - base >= 4.7 && < 5
 - lens 
 - pipes 
-- xeno
 - mtl 
 - containers
 - protolude
 - bytestring
 - pipes-safe
+- attoparsec
+- pipes-text
+- text
 
 library:
   source-dirs: src
